[package]
name = "factorio-printer"
version = "0.2.1"
authors = ["vixfwis <vixfwis at github.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
image = "0.24"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
flate2 = "1.0"
base64 = "0.21"
csv = "1.2"
